--- a/sample/src/main/res/layout/activity_line.xml
+++ b/sample/src/main/res/layout/activity_line.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <org.itheima.tabindicator.library.TabIndicator
+    <com.github.library.OkTabIndicator
         android:id="@+id/indicator"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
